# twt-uhttp

./: .gitignore  CMakeLists.txt  REAME.md  run.bat  run.sh
python/: 1simple_response.py  2simple_page.py  3simple_link.py  4simple_notfound.py
src/: common.h  simple_page.c  simple_resp.c
web/: 404.html  dynamic.html  index.html  ipsum.html
web/js/: index.js
